# genai-training-track

./: .gitignore  Dockerfile  main.py  pydantic-test.py  pyproject.toml  up.sh  uv-help.txt
.github/workflows/: ruff.yml
my-agent/: containers.py  main.py  myagent.py  pyproject.toml
my-mcp/: espn_fantasy.py  mcp_with_deps.py  output.txt
my_agent/: containers.py  core.py  main.py  myagent.py  pyproject.toml  test_agents.py
my_api/: fast-api-help.txt  fastapi-test.py  my_agent_api.py
my_mcp/: espn_fantasy.py  pyproject.toml  sleeper_fantasy.py  weather.py
my_rag/: policies.txt  rag_main.py
my_ui/: Dockerfile  ui_main.py
pydantic/: pydantic-test.py
